Fix broken layout

--- a/src/App.css
+++ b/src/App.css
@@ -160,12 +160,19 @@ header li a {
     height: 15rem;
 }
 
+.content {
+    display: flex;
+    flex-direction: column;
+    align-items: baseline;
+    gap: 0.4rem;
+}
+
 .content span {
+    width: 100%;
     display: flex;
     align-items: center;
     color: #111827;
     font-size: 0.9rem;
-    line-height: 1.75rem;
     font-weight: 900;
 }
 
@@ -182,6 +189,7 @@ header li a {
     color: #6B7280;
     font-size: 0.875rem;
     line-height: 1.25rem;
+    text-align: justify;
 }
 
 .content a {
@@ -366,7 +374,7 @@ footer {
 
     .content span {
         width: 100%;
-        font-size: 2rem;
+        font-size: 1.3rem;
     }
 
     .content a {
